--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "grovebook-editor",
   "displayName": "Grovebook Editor",
   "description": "",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "publisher": "kineviz",
+  "repository": "https://github.com/kineviz/grovebook-editor",
   "engines": {
     "vscode": "^1.93.1"
   },
