--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grovebook-editor",
   "displayName": "Grovebook Editor",
   "description": "",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "publisher": "kineviz",
   "repository": "https://github.com/kineviz/grovebook-editor",
   "engines": {
@@ -26,7 +26,7 @@
             "type": "string"
           },
           "default": {},
-          "description": "Map of GraphXR server origins to their corresponding API keys",
+          "description": "(Deprecated) API keys are now stored securely. Existing keys will be migrated automatically.",
           "scope": "resource"
         },
         "grovebook.enableTracing": {
@@ -36,7 +36,20 @@
         }
       }
     },
-    "commands": []
+    "commands": [
+      {
+        "command": "grovebook.setApiKey",
+        "title": "Grovebook: Set API Key"
+      },
+      {
+        "command": "grovebook.deleteApiKey",
+        "title": "Grovebook: Delete API Key"
+      },
+      {
+        "command": "grovebook.listApiKeys",
+        "title": "Grovebook: List API Keys"
+      }
+    ]
   },
   "scripts": {
     "lint": "eslint .",
