--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
 			"name": "Run Extension",
 			"type": "extensionHost",
 			"request": "launch",
+			"preLaunchTask": "Ensure working directory exists",
 			"args": [
+				"${userHome}/.kineviz-grove",
 				"--extensionDevelopmentPath=${workspaceFolder}"
 			]
 		}
