Enhance file handling in extension.js to support direct markdown usage for .md files, improving content upload logic based on file extension. Update launch and task configurations to use environment variables for home directory paths, ensuring compatibility across platforms.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,10 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"preLaunchTask": "Ensure working directory exists",
-			"args": [
-				"${userHome}/.kineviz-grove",
-				"--extensionDevelopmentPath=${workspaceFolder}"
-			]
+		"args": [
+			"${env:HOME}/.kineviz-grove",
+			"--extensionDevelopmentPath=${workspaceFolder}"
+		]
 		}
 	]
 }
